--- a/licheerv_dock/woody/ipkvm/bblayers.conf
+++ b/licheerv_dock/woody/ipkvm/bblayers.conf
@@ -11,12 +11,13 @@ BBFILES = ""
 BASELAYERS ?= " \
   ${OEROOT}/layers/meta-woodylab/meta-woody \
   ${OEROOT}/layers/meta-openembedded/meta-oe \
+  ${OEROOT}/layers/meta-openembedded/meta-python \
 "
 
 # These layers hold machine specific content, aka Board Support Packages
 
 BSPLAYERS ?= " \
-  ${OEROOT}/layers/meta-woodylab/meta-loongson \
+  ${OEROOT}/layers/meta-riscv \
 "
 
 # Add your overlay location to EXTRALAYERS
@@ -29,5 +30,4 @@ BBLAYERS = " \
   ${BSPLAYERS} \
   ${EXTRALAYERS} \
   ${OEROOT}/layers/openembedded-core/meta \
-  /home/woody/workspace/yocto-woodylab/build-timcreate-l5a2-woody-tester/workspace \
-  "
+"
