generalize local.conf
Signed-off-by: Woody Zhang <woodylab@foxmail.com>

--- a/local.conf
+++ b/local.conf
@@ -26,7 +26,7 @@
 # E.g.: PACKAGE_CLASSES ?= "package_rpm package_deb package_ipk"
 # OE-Core defaults to ipkg, whilst Poky defaults to rpm:
 # PACKAGE_CLASSES ?= "package_rpm"
-PACKAGE_CLASSES = "package_deb"
+PACKAGE_CLASSES ?= "package_deb"
 
 #
 # SDK target architecture
@@ -195,8 +195,3 @@ PACKAGECONFIG:append:pn-qemu-system-native = " sdl"
 # track the version of this file when it was generated. This can safely be ignored if
 # this doesn't mean anything to you.
 CONF_VERSION = "2"
-
-SDK_TOOLCHAIN_LANGS = "go rust"
-#PREFERRED_VERSION_grub = "2.06"
-PREFERRED_VERSION_grep = "3.7"
-PREFERRED_PROVIDER_virtual/kernel = "linux-woody-dev"
