--- a/licheerv_dock/woody/tester/bblayers.conf
+++ b/licheerv_dock/woody/tester/bblayers.conf
@@ -11,6 +11,8 @@ BBFILES = ""
 BASELAYERS ?= " \
   ${OEROOT}/layers/meta-openembedded/meta-oe \
   ${OEROOT}/layers/meta-openembedded/meta-python \
+  ${OEROOT}/layers/meta-openembedded/meta-networking \
+  ${OEROOT}/layers/meta-openembedded/meta-webserver \
 "
 
 # These layers hold machine specific content, aka Board Support Packages
